Fix: Multi-station deep-link survival + Pflichttest toggle + form save fix (#26)
* Multi-station deep-link survival + Pflichttest toggle + form save fix

Deep links into a station-scoped page (an email/feed notification, a
shared URL, the help-center link to a station resource, …) now survive
the multi-station login flow:

- The router guard intercepts any /station/* path that arrives without
  a resolved station. If the URL carries ?station=<uid> the guard
  pins that station and continues; otherwise it routes to the
  cross-station picker with the original path preserved as ?redirect.
- The cross-station picker honours that redirect both via the route
  query and a direct read of window.location.search, so a station
  pick resumes the deep link instead of dropping the user on the
  dashboard.
- DashboardView's "no member resolved" bouncer preserves the current
  path the same way instead of replacing /cross-station with no query.
- LoginView's auto-redirect on an existing token honours ?redirect
  too, so refreshing /login?redirect=… doesn't lose the destination.
- The /requirements alias forwards to /station/requirements via a
  functional redirect so the inactivity guard's ?redirect=<deep-link>
  is no longer stripped during the hop; the post-login requirements
  view then resumes the deep link once there's nothing left to fulfil.
- The onboarding tour no longer auto-starts when the user lands on a
  deep link; it waits for the next direct dashboard visit.

Backend deep-links now also carry the station UUID by default so the
guard can resolve without the picker detour:

- NotificationService.resolveNotificationUrl appends ?station=<uid>
  to every station-scoped URL via a small helper. The signature gained
  a stationUid argument; the feed renderer and email digest path both
  pass the station they already loaded.
- NotificationFeedRenderer's RenderContext gained stationUid and the
  fallback "dashboard" link includes it as well.
- IcalEventRenderer's VEVENT URL